--- a/src/template.html
+++ b/src/template.html
@@ -60,6 +60,8 @@
           <input type="submit" class="btn btn-default create-submit" value="Add" />
         </div>
       </form>
+      <h2>Stats</h2>
+      <div style="width: 800px;"><canvas id="app-chart"></canvas></div>
       <h2>Log</h2>
       <div class="card" id="total-calories-container">
         <h3>Total calories logged: <span id="total-calories">0</span></h3>
